fixed Navbar links not working, also changed the background color of the navbar so it is visible over text.

--- a/WMC_Project/style.css
+++ b/WMC_Project/style.css
@@ -187,10 +187,11 @@ section::before
     bottom: 0;
     text-align: right;
 }
-#stickyNavbar
+#fixedNavbar
 {
-    position: sticky;
+    position: fixed;
     top: 0;
+    background: linear-gradient(to bottom, #91b793, #50727c, #292E49) fixed;
 }
 .glassBackground {
     background-color: rgba(255, 255, 255, .60);
